@@ -1,3 +1,13 @@
+Wed Aug 19 13:37:00 1998  Tom Yu  <tlyu@mit.edu>
+
+	* kerberos_v4.c (set_tgtkey): Add kvno arg to fetch an explicit
+	kvno.  Also compare kvno as well as realm when caching the TGT
+	key.  Declare as static.
+	(kerb_get_principal): Add kvno argument to permit searching for
+	an explicit kvno.
+	(kerberos_v4): Extract the kvno directly out of the krb_req, since
+	we know what the format is.
+
 Wed Aug 12 18:40:08 1998  Tom Yu  <tlyu@mit.edu>
 
 	* kerberos_v4.c: Add macro K4KDC_ENCTYPE_OK to determine whether a
